@@ -641,15 +641,14 @@ public final class JSONUtils {
      */
     public static Number transformNumber(Number input) {
         if (input instanceof Float) {
-            return new Double(input.toString());
+            return Double.valueOf(input.toString());
         } else if (input instanceof Short) {
-            return new Integer(input.intValue());
+            return input.intValue();
         } else if (input instanceof Byte) {
-            return new Integer(input.intValue());
+            return input.intValue();
         } else if (input instanceof Long) {
-            Long max = new Long(Integer.MAX_VALUE);
-            if (input.longValue() <= max.longValue() && input.longValue() >= Integer.MIN_VALUE) {
-                return new Integer(input.intValue());
+            if (input.longValue() <= Integer.MAX_VALUE && input.longValue() >= Integer.MIN_VALUE) {
+                return input.intValue();
             }
         }
 
